fix: dashboard ui bugs, rm notif, rm settings
